--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -19,5 +19,5 @@ jobs:
           git config --local user.email "jianglibo@gmail.com"
           git config --local user.name "jianglibo"
           git add .
-          git commit -m "update cats"
+          git commit -m "generate pack json file."
           git push
