--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -9,6 +9,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.1.1
+      - name: Setup Java
+        uses: actions/setup-java@v4.0.0
+        with:
+          java-version: '21'
       - uses: jbangdev/setup-jbang@v0.1.1
       - name: Run a one-line script
         run: jbang pack.java ./src/cats
